to list not found fix